[gd_scene load_steps=13 format=2]

[ext_resource path="res://Interface/Hover/HoverRect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/UnitFrames/UnitFrame.gd" type="Script" id=2]
[ext_resource path="res://Assets/Images/Portraits/Female_01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sounds/switch10.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/UI/skull-crossed-bones.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/SpellIcons/SpellBookPage09_110.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/SpellIcons/SpellBook07_37.png" type="Texture" id=7]
[ext_resource path="res://Interface/CooldownProgress.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.796078, 0.2, 0.2, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.890196, 0.843137, 0.109804, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="Animation" id=4]
resource_name = "Poison"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("DoT:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 4, 4 ), Vector2( 1, 1 ) ]
}

[node name="UnitFrame" type="TextureButton" groups=[
"unit_frame",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -656.0
margin_bottom = -1216.0
rect_min_size = Vector2( 128, 128 )
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverRect" parent="." instance=ExtResource( 1 )]

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_right = 1.0
margin_left = 17.0
margin_top = 122.0
margin_right = -17.0
margin_bottom = 133.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
step = 1.0
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldBar" type="ProgressBar" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_left = 17.0
margin_top = 110.0
margin_right = -17.0
margin_bottom = 121.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
max_value = 20.0
step = 1.0
value = 20.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -2.0
margin_top = -2.0
margin_right = 130.0
margin_bottom = 146.0
mouse_filter = 2
color = Color( 0.827451, 1, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Skull" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 64, 64 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="HoT" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 5.0
margin_top = 5.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownProgress" parent="HoT" instance=ExtResource( 8 )]
fill_mode = 5
nine_patch_stretch = true

[node name="DoT" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 96.0
margin_top = 5.0
margin_right = 123.0
margin_bottom = 32.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownProgress" parent="DoT" instance=ExtResource( 8 )]
nine_patch_stretch = true

[node name="DoTTimer" type="Timer" parent="."]

[node name="HoTTimer" type="Timer" parent="."]

[node name="EffectTicker" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Poison = SubResource( 4 )

[connection signal="pressed" from="." to="." method="_on_UnitFrame_pressed"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="DoTTimer" to="." method="_on_DoTTimer_timeout"]
[connection signal="timeout" from="HoTTimer" to="." method="_on_HoTTimer_timeout"]
[connection signal="timeout" from="EffectTicker" to="." method="_on_EffectTicker_timeout"]
